working on adding db

--- a/HotelsWebApi/appsettings.json
+++ b/HotelsWebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite":  "Data Source=HotelsAPI.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
